--- a/ClientSide/UI/index.html
+++ b/ClientSide/UI/index.html
@@ -28,29 +28,14 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
-<style>
-.parallax {
-    /* The image used */
-    background-image: url("assets/img/rasberry.jpg");
-    opacity: 0.7;
 
-    /* Set a specific height */
-    min-height: 700px; 
-
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-</style>
 </head>
 
 <body>
 
     <!-- Top content -->
 
-    <section id="form" class="top-content" >
+    <section id="form" class="top-content">
         <div class="inner-bg">
             <div class="container">
                 <div class="row">
@@ -73,18 +58,47 @@
                             <form role="form" action="" method="post" class="login-form" id="login-form">
                                 <div class="form-group">
                                     <label class="sr-only" for="form-username">Username</label>
-                                    <input type="text" name="form-username" placeholder="Enter server Ip" class="form-username form-control" id="form-username">
+                                    <input list="ipList" type="text" name="form-username" placeholder="Enter Client Ip" class="form-username form-control" id="form-username">
                                 </div>
                                 <div class="form-group">
                                     <label class="sr-only" for="form-password">Password</label>
-                                    <input type="text" name="form-password" placeholder="Enter repo Url" value="https://github.com/amitakamat/cmpe273" class="form-password form-control" id="form-password">
+                                    <input type="text" name="form-password" placeholder="Enter repo Url" value="https://github.com/amitakamat/cmpe273" class="form-password form-control"
+                                        id="form-password">
                                 </div>
                                 <button type="submit" class="btn">Deploy!</button>
                             </form>
+                            <div id="output" style="margin-top:20px; display:none;">
+                                <h3 style="color:white;"> Status: </h3>
+                                <p id="message" style="color:white"> </p>
+                                <p id="status" style="color:white"> </p>
+
+                                <center><button class="btn" onclick="myFunction()">Refresh</button></center>
+
+                                <script>
+                                    function myFunction() {
+                                        var ip = document.getElementById("login-form")[0].value;
+                                        jQuery.ajax({
+                                            type: "GET",
+                                            url: "http://104.196.235.71/deployer/v1/" + ip + "/status",
+                                            dataType: "json",
+                                            success: function (data, textStatus, jqXHR) {
+                                                console.log(data + textStatus);
+                                                document.getElementById("message").innerHTML = data.status;
+                                                document.getElementById("status").innerHTML = textStatus;
+                                            }, //function(data, textStatus, jqXHR)
+                                            error: function (jqXhr, textStatus, errorThrown) {
+                                                console.log(errorThrown); //function(jqXHR, textStatus, errorThrown)
+                                            }
+                                        });
+                                    }
+                                </script>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+
+
         </div>
 
     </section>
