--- a/ClientSide/UI/index.html
+++ b/ClientSide/UI/index.html
@@ -34,7 +34,6 @@
 <body>
 
     <!-- Top content -->
-
     <section id="form" class="top-content">
         <div class="inner-bg">
             <div class="container">
@@ -59,6 +58,38 @@
                                 <div class="form-group">
                                     <label class="sr-only" for="form-username">Username</label>
                                     <input list="ipList" type="text" name="form-username" placeholder="Enter Client Ip" class="form-username form-control" id="form-username">
+                                    <datalist id="ipList"></datalist>
+
+                                    <script type="text/javascript">
+                                        var list = [];
+                                        window.onload = function () {
+                                            jQuery.ajax({
+                                                type: "GET",
+                                                url: "http://104.196.235.71/deployer/v1/list",
+                                                dataType: "json",
+                                                success: function (data, textStatus, jqXHR) {
+                                                    data.forEach(function (element) {
+                                                        list.push(element);
+                                                    }, this);
+                                                    console.log(data.length + textStatus);
+                                                    addItems(list);
+                                                }, //function(data, textStatus, jqXHR)
+                                                error: function (jqXhr, textStatus, errorThrown) {
+                                                    console.log(errorThrown); //function(jqXHR, textStatus, errorThrown)
+                                                }
+                                            });
+                                        }
+
+                                        function addItems(list) {
+                                            console.log(list);
+                                            var options = '';
+                                            for (var i = 0; i < list.length; i++) {
+                                                options += '<option value="' + list[i] + '" />';
+                                                console.log(list[i]);
+                                            }
+                                            document.getElementById('ipList').innerHTML = options;
+                                        }
+                                    </script>
                                 </div>
                                 <div class="form-group">
                                     <label class="sr-only" for="form-password">Password</label>
