--- a/ClientSide/UI/index.html
+++ b/ClientSide/UI/index.html
@@ -114,7 +114,7 @@
                             </form>
                             <div id="output" style="margin-top:20px; display:none;">
                                 <h3 id="status" style="color:white;"> Status: </h3>
-                                <p id="message" style="color:white"> </p>
+                                <p id="result" style="color:white"> </p>
                                 <center><button class="btn" onclick="myFunction()">Refresh</button></center>
 
                                 <script>
@@ -126,7 +126,7 @@
                                             dataType: "json",
                                             success: function (data, textStatus, jqXHR) {
                                                 console.log(data + textStatus);
-                                                document.getElementById("message").innerHTML = data.status;
+                                                document.getElementById("result").innerHTML = data.status;
                                                 document.getElementById("status").innerHTML = "Status: " +
                                                     textStatus;
                                             }, //function(data, textStatus, jqXHR)
@@ -144,9 +144,7 @@
         </div>
     </section>
     <div style="padding:5px;" id="message">
-        <div class="alert alert-info " id="alert" role="alert"><a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a><strong>Info!</strong> You should
-            <a href="https://github.com/login/oauth/authorize?client_id=9ef838536d7516d3ab56&scope=write:repo_hook" class="alert-link">Connect to Github</a>
-        </div>
+
     </div>
 
 
