Change of access token flow

--- a/ClientSide/UI/index.html
+++ b/ClientSide/UI/index.html
@@ -62,7 +62,7 @@
                             </div>
                             <div class="form-top-right">
                                 <a href="https://github.com/login/oauth/authorize?client_id=9ef838536d7516d3ab56&scope=write:repo_hook">
-                                    <i class="fa fa-github">
+                                    <i class="fa fa-github-square" aria-hidden="true">
                                 </i>
                                 </a>
                             </div>
@@ -146,7 +146,6 @@
     <div style="padding:5px;" id="message">
 
     </div>
-
 
     <!--[if lt IE 10]>
             <script src="assets/js/placeholder.js"></script>
