Updated Index.html . changed onclick function

--- a/ClientSide/UI/index.html
+++ b/ClientSide/UI/index.html
@@ -156,7 +156,7 @@
                                     </script>
                                 </div>
 
-                                <button type="submit" class="btn" onclick= 'myfunction()'id="btn">Check Status!</button>
+                                <button type="submit" class="btn" onclick= 'myFunction()'id="btn">Check Status!</button>
                                 <p class="message">Need to Deploy? <a href="#">Deploy</a></p>
                             </form>
                             <div id="output" style="margin-top:20px; display:none;">
