--- a/ClientSide/UI/index.html
+++ b/ClientSide/UI/index.html
@@ -100,7 +100,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label class="sr-only" for="form-password">Password</label>
-                                    <input type="text" name="form-password" placeholder="Enter repo Url" value="https://github.com/amitakamat/cmpe273" class="form-password form-control"
+                                    <input type="text" name="form-password" placeholder="Enter Github Repo Url"  class="form-password form-control"
                                         id="form-password">
                                 </div>
                                 <button type="submit" class="btn" id="btn">Deploy!</button>
